--- a/beobgrp_site/templates/base.html
+++ b/beobgrp_site/templates/base.html
@@ -24,7 +24,7 @@
         {% endif %}
 
         {# Global stylesheets #}
-        <link rel="stylesheet" type="text/css" href="{% static 'css/beobgrp_site.css' %}">
+        <link rel="stylesheet" type="text/css" href="{% sass_src 'css/beobgrp_site.scss' %}">
         <link rel="stylesheet" href="{% static 'css/bootstrap.min.css' %}">
 
         {% block extra_css %}
