--- a/static/css/beobgrp_site.css
+++ b/static/css/beobgrp_site.css
@@ -1,18 +1,18 @@
-h1 {
+.block-h1 {
   color: gold;
   margin-bottom: 0.5em;
   font-weight: bolder; }
 
-h2 {
+.block-h2 {
   color: gold;
   margin-bottom: 0.5em;
   font-weight: bold; }
 
-h3 {
+.block-h3 {
   color: gold;
   margin-bottom: 0.25em; }
 
-h4 {
+.block-h4 {
   color: gold;
   margin-bottom: 0.25em; }
 
@@ -21,24 +21,6 @@ b {
 
 a {
   color: #cccc00; }
-
-iframe {
-  border: none;
-  display: block; }
-
-html, body, .container-fluid, .left-part, .main-part, .bottom-part {
-  height: 120%; }
-
-body {
-  background-color: black;
-  color: white;
-  padding-top: 1%;
-  padding-right: 1%;
-  padding-bottom: 1%;
-  padding-left: 1%; }
-
-.event-link {
-  background-color: #000099; }
 
 .top-part {
   padding-top: 1%;
@@ -50,7 +32,7 @@ body {
   background-image: url("/static/images/banner.jpg");
   background-repeat: no-repeat; }
 
-.bottom-part {
+.main-content {
   background: linear-gradient(rgba(0, 0, 0, 0.7), rgba(0, 0, 0, 0.7)), url("/static/images/Background_Oststernwarte_1600.jpg");
   background-position: center;
   background-repeat: no-repeat;
@@ -61,151 +43,84 @@ body {
   padding-bottom: 1%;
   padding-left: 1%; }
 
-.card {
-  margin-top: 1%;
-  margin-bottom: 1%;
-  margin-left: 1%;
-  margin-right: 1%; }
+/* Reset */
+* {
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box; }
 
-.card-header {
-  font-size: 1.2em; }
-
-.btn {
-  background-color: #00004e;
+body {
+  font-family: Arial, sans-serif;
+  line-height: 1.6;
+  background-color: black;
   color: white;
-  font-size: 1em; }
-  .btn:hover, .btn:focus, .btn:active {
-    background-color: #0000b4;
-    color: white;
-    font-size: 1em; }
+  padding-top: 1%;
+  padding-right: 1%;
+  padding-bottom: 1%;
+  padding-left: 1%; }
 
-.btn-default {
-  background-color: #00004e;
-  color: white;
-  font-size: 1em; }
-  .btn-default:hover, .btn-default:focus, .btn-default:active {
-    background-color: #0000b4;
-    color: white;
-    font-size: 1em; }
+/* Header */
+header {
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+  padding: 1em;
+  background-color: #333;
+  color: #fff; }
 
-.dropdown-item {
-  background-color: #00004e;
-  color: white;
-  font-size: 1em; }
-  .dropdown-item:hover, .dropdown-item:focus, .dropdown-item:active {
-    background-color: #0000b4;
-    color: white;
-    font-size: 1em; }
+.logo a {
+  color: #fff;
+  text-decoration: none;
+  font-size: 1.5em; }
 
-.dropdown-toggle.btn-default {
-  background-color: #00004e;
-  color: white;
-  font-size: 1em; }
-  .dropdown-toggle.btn-default:hover, .dropdown-toggle.btn-default:focus, .dropdown-toggle.btn-default:active {
-    background-color: #0000b4;
-    color: white;
-    font-size: 1em; }
+#desktop-nav ul {
+  list-style: none;
+  display: flex;
+  gap: 1em; }
 
-.open > dropdown-toggle.btn-default {
-  background-color: #00004e;
-  color: white;
-  font-size: 1em; }
-  .open > dropdown-toggle.btn-default:hover, .open > dropdown-toggle.btn-default:focus, .open > dropdown-toggle.btn-default:active {
-    background-color: #0000b4;
-    color: white;
-    font-size: 1em; }
+#desktop-nav ul li a {
+  color: #fff;
+  text-decoration: none; }
 
-.selected {
-  background-color: #0000b4;
-  color: white;
-  font-size: 1em; }
+/* Mobile Menu */
+.menu-toggle {
+  display: none; }
 
-.dropdown-menu {
-  background-color: #00004e;
-  color: white;
-  font-size: 1em; }
-  .dropdown-menu li a {
-    background-color: #00004e;
-    color: white;
-    font-size: 1em; }
-  .dropdown-menu li a:hover, .dropdown-menu li a:focus, .dropdown-menu li a:active {
-    background-color: #0000b4;
-    color: white;
-    font-size: 1em; }
-
-.image-with-caption img {
-  margin: auto; }
-
-.image-with-caption p {
-  text-align: center;
-  font-weight: bold;
-  margin-bottom: 20px; }
-
-.side-menu {
-  font-size: 0.8em; }
-
-.gallery-item {
-  border: solid 1px;
-  border-radius: 6px;
-  border-color: #666600;
-  padding: 5px;
-  margin: 5px; }
-
-.gallery-button {
-  font-weight: bold;
+.menu-icon {
+  display: none;
   font-size: 1.5em;
-  border: solid 1px;
-  border-radius: 3px;
-  background-color: #5d5d5d;
-  margin: 2px; }
+  color: #fff;
+  cursor: pointer; }
 
-.modal {
-  border: solid 2px;
-  border-radius: 10px;
-  border-color: #666600;
-  padding: 5px; }
+/* Hide Mobile Navigation by Default */
+#mobile-nav {
+  display: none;
+  position: absolute;
+  top: 60px;
+  right: 0;
+  width: 100%;
+  background-color: #333;
+  text-align: center; }
 
-.modal-header, .modal-content, .modal-footer {
-  background-color: #000025;
-  color: white; }
-  .modal-header button, .modal-content button, .modal-footer button {
-    opacity: 1.0; }
+#mobile-nav ul {
+  list-style: none;
+  padding: 1em; }
 
-.event {
-  text-align: center;
-  background-color: #000099;
-  font-size: 1.0em; }
-
-.warning {
-  background-color: red;
-  text-align: center;
-  color: yellow;
-  font-size: 1.2em; }
-
-.black-background {
-  background-color: black; }
-
-.bg-event {
-  background-color: #000099; }
-
-.bg-ok {
-  background-color: #006700; }
-
-.bg-unclear {
-  background-color: #999900; }
-  .bg-unclear a {
-    color: darkred; }
-
-.embed-full {
+#mobile-nav ul li a {
   display: block;
-  width: 70vw;
-  height: 70vw; }
+  color: #fff;
+  padding: 0.5em;
+  text-decoration: none; }
 
-.author {
-  text-align: center;
-  font-style: italic; }
+/* When checkbox is checked, show the mobile menu */
+.menu-toggle:checked + .menu-icon + #mobile-nav {
+  display: block; }
 
-.bg-success a {
-  color: yellow; }
+/* Responsive Styles */
+@media (max-width: 768px) {
+  #desktop-nav {
+    display: none; }
+  .menu-icon {
+    display: block; } }
 
 /*# sourceMappingURL=beobgrp_site.css.map */
