Properly render the desktop menu horizontally.

--- a/beobgrp_site/static/css/beobgrp_site.scss
+++ b/beobgrp_site/static/css/beobgrp_site.scss
@@ -155,6 +155,26 @@ header {
   text-decoration: none;
 }
 
+.menu-item {
+  text-decoration: none; /* Remove underline */
+  color: white;
+  padding: 0.5em 1em;
+  border: 1px solid #555;
+  border-radius: 4px;
+  transition: background-color 0.3s; /* Smooth hover effect */
+  @include button-style
+}
+
+/* Hover effect for buttons */
+.menu-item:hover {
+  @include button-style-active
+}
+
+/* Active state for the last clicked button */
+.menu-item.active {
+  @include button-style-active
+}
+
 /* When checkbox is checked, show the mobile menu */
 .menu-toggle:checked + .menu-icon + #mobile-nav {
   display: block;
