--- a/beobgrp_site/templates/base.html
+++ b/beobgrp_site/templates/base.html
@@ -30,12 +30,12 @@
             {% get_site_root as site_root %}
             <!-- Desktop Menu -->
             <nav id="desktop-nav">
-                <p>
-                    <a href="{% pageurl site_root %}">Home</a> |
+                <ul class="menubar">
+                    <li><a  class="menu-item {% add_active_class site_root.url %}" href="{% pageurl site_root %}">Home</a></li>
                     {% for menuitem in site_root.get_children.live.in_menu %}
-                        <a href="{% pageurl menuitem %}">{{ menuitem.title }}</a>
+                        <li><a  class="menu-item {% add_active_class menuitem.url %}" href="{% pageurl menuitem %}">{{ menuitem.title }}</a></li>
                     {% endfor %}
-                </p>
+                </ul>
             </nav>
 
             <!-- Mobile Menu Button -->
