--- a/beobgrp_site/templates/includes/site_menu.html
+++ b/beobgrp_site/templates/includes/site_menu.html
@@ -1,4 +1,4 @@
-{% load static wagtailcore_tags navigation_tags %}
+{% load wagtailcore_tags navigation_tags %}
 
 <nav id="{{ menu_id }}">
     <ul>
