--- a/static/css/beobgrp_site.css
+++ b/static/css/beobgrp_site.css
@@ -1,23 +1,23 @@
 h1, .block-h1 {
   color: gold;
-  margin-bottom: 0.5em;
+  margin-bottom: 0.25em;
   font-weight: bolder;
   font-size: 2rem; }
 
 h2, .block-h2 {
   color: gold;
-  margin-bottom: 0.5em;
+  margin-bottom: 0.25em;
   font-weight: bold;
   font-size: 1.75rem; }
 
 h3, .block-h3 {
   color: gold;
-  margin-bottom: 0.25em;
+  margin-bottom: 0.125em;
   font-size: 1.5rem; }
 
 h4, .block-h4 {
   color: gold;
-  margin-bottom: 0.25em;
+  margin-bottom: 0.125em;
   font-size: 1.25rem; }
 
 b {
@@ -33,10 +33,10 @@ main {
   background-repeat: no-repeat;
   background-attachment: fixed;
   background-size: cover;
-  padding-top: 1%;
-  padding-right: 1%;
-  padding-bottom: 1%;
-  padding-left: 1%; }
+  padding-top: 0.5%;
+  padding-right: 0.5%;
+  padding-bottom: 0.5%;
+  padding-left: 0.5%; }
   main * {
     background: transparent; }
 
@@ -46,13 +46,13 @@ main {
   padding: 0;
   box-sizing: border-box;
   font-family: Arial, sans-serif;
-  line-height: 1.6;
+  line-height: 1.2em;
   background-color: black;
   color: white;
-  padding-top: 1%;
-  padding-right: 1%;
-  padding-bottom: 1%;
-  padding-left: 1%; }
+  padding-top: 0.5%;
+  padding-right: 0.5%;
+  padding-bottom: 0.5%;
+  padding-left: 0.5%; }
 
 /* Header */
 header {
@@ -62,19 +62,23 @@ header {
   padding: 1em;
   background-color: #333;
   color: #fff;
-  padding-top: 1%;
-  padding-right: 1%;
-  padding-bottom: 1%;
-  padding-left: 1%;
+  padding-top: 0.5%;
+  padding-right: 0.5%;
+  padding-bottom: 0.5%;
+  padding-left: 0.5%;
   background-image: url("/static/images/banner.jpg");
   background-repeat: no-repeat;
   background-position: center;
   background-size: cover; }
 
+#desktop-nav {
+  background: transparent; }
+
 #desktop-nav ul {
   list-style: none;
   display: flex;
-  gap: 1em; }
+  gap: 1em;
+  background: transparent; }
 
 #desktop-nav ul li a {
   color: #fff;
