--- a/home/templates/blocks/event_list_block.html
+++ b/home/templates/blocks/event_list_block.html
@@ -2,13 +2,24 @@
     {% if events %}
         <ul>
             {% for event in events %}
-                <li>
-                    <strong>{{ event.event_title }}</strong><br>
-                    <span>{{ event.start_time|date:"Y-m-d H:i" }}</span><br>
-                    {% if event.location %}
-                        <span>{{ event.location }}</span>
-                    {% endif %}
-                </li>
+                <div class="card">
+                    <div class="card-header">Vortrag im Museum</div>
+                    <div class="card-body">
+                        <h2 class="card-title">{{ event.start_time|date:"l" }}, den
+                            {{ event.start_time|date:"m.d, H:i" }} Uhr</h2>
+                        <p class="card-subtitle">{{ event.event_title }}<br>{{ event.referent }}</p>
+
+                        <!-- Hidden checkbox to toggle the abstract -->
+                        <input type="checkbox" id="toggle-info" class="toggle-checkbox">
+                        <label for="toggle-info" class="btn btn-info">Info</label>
+                        <a href="#" class="btn btn-reservation">Reservierung</a>
+
+                        <!-- Abstract content -->
+                        <div class="card-abstract">
+                            <p>{{ event.abstract|striptags }}</p>
+                        </div>
+                    </div>
+                </div>
             {% endfor %}
         </ul>
     {% else %}
