--- a/home/templates/home/event_page.html
+++ b/home/templates/home/event_page.html
@@ -7,6 +7,8 @@
     <link rel="stylesheet" type="text/css" href="{% sass_src 'css/event_info.scss' %}">
 {% endblock extra_css %}
 
+{% event_checkbox_style test }
+
 {% block content %}
 
   {% include_block page.body %}
