--- a/beobgrp_site/templates/base.html
+++ b/beobgrp_site/templates/base.html
@@ -16,7 +16,7 @@
         {% endif %}
 
         {# Global stylesheets #}
-        <link rel="stylesheet" type="text/css" href="{% sass_src 'css/beobgrp_site.scss' %}">
+        <link rel="stylesheet" type="text/css" href="{% sass_src 'sass/beobgrp_site.scss' %}">
 
         {% block extra_css %}
         {# Override this in templates to add extra stylesheets #}
