Add Bulma SCSS files, ignore CSS files, since they are compiled from SCSS files.

--- a/beobgrp_site/templates/base.html
+++ b/beobgrp_site/templates/base.html
@@ -16,7 +16,8 @@
         {% endif %}
 
         {# Global stylesheets #}
-        <link rel="stylesheet" type="text/css" href="{% sass_src 'sass/beobgrp_site.scss' %}">
+        <link rel="stylesheet" type="text/css" href="{% sass_src 'bulma/bulma.scss' %}"/>
+        <link rel="stylesheet" type="text/css" href="{% sass_src 'sass/beobgrp_site.scss' %}"/>
 
         {% block extra_css %}
         {# Override this in templates to add extra stylesheets #}
