--- a/home/templates/home/event_page.html
+++ b/home/templates/home/event_page.html
@@ -4,7 +4,7 @@
 {% block body_class %}template-eventpage{% endblock %}
 
 {% block extra_css %}
-    <link rel="stylesheet" type="text/css" href="{% sass_src 'css/event_info.scss' %}">
+    <link rel="stylesheet" type="text/css" href="{% sass_src 'sass/event_info.scss' %}"/>
 {% endblock extra_css %}
 
 {% event_checkbox_style test }
