--- a/beobgrp_site/templates/base.html
+++ b/beobgrp_site/templates/base.html
@@ -1,4 +1,5 @@
-{% load static sass_tags wagtailcore_tags navigation_tags wagtailuserbar %}
+{% load static wagtailcore_tags navigation_tags wagtailuserbar %}
+{% load compress %}
 
 <!DOCTYPE html>
 <html lang="en">
@@ -16,12 +17,14 @@
         {% endif %}
 
         {# Global stylesheets #}
-        <link rel="stylesheet" type="text/css" href="{% sass_src 'bulma/bulma.scss' %}"/>
-        <link rel="stylesheet" type="text/css" href="{% sass_src 'sass/beobgrp_site.scss' %}"/>
+        {% compress css %}
+        <link rel="stylesheet" type="text/x-scss" href="{% static 'sass/beobgrp_site.scss' %}"/>
+        {% endcompress %}
 
         {% block extra_css %}
         {# Override this in templates to add extra stylesheets #}
         {% endblock %}
+
     </head>
 
     <body class="{% block body_class %}{% endblock %}">
