--- a/home/templates/home/event_page.html
+++ b/home/templates/home/event_page.html
@@ -1,10 +1,13 @@
 {% extends "base.html" %}
-{% load static sass_tags wagtailcore_tags %}
+{% load static wagtailcore_tags %}
+{% load compress %}
 
 {% block body_class %}template-eventpage{% endblock %}
 
 {% block extra_css %}
-    <link rel="stylesheet" type="text/css" href="{% sass_src 'sass/event_info.scss' %}"/>
+{% compress css %}
+    <link rel="stylesheet" type="text/x-scss" href="{% static 'sass/event_info.scss' %}"/>
+{% endcompress %}
 {% endblock extra_css %}
 
 {% event_checkbox_style test }
