Fix issue with compiling SCSS files

--- a/beobgrp_site/templates/base.html
+++ b/beobgrp_site/templates/base.html
@@ -18,7 +18,7 @@
 
         {# Global stylesheets #}
         {% compress css %}
-        <link rel="stylesheet" type="text/x-scss" href="{% static 'sass/beobgrp_site.scss' %}"/>
+        <link rel="stylesheet" type="text/x-scss" href="{% static 'css/beobgrp_site.scss' %}"/>
         {% endcompress %}
 
         {% block extra_css %}
