--- a/home/templates/home/event_page.html
+++ b/home/templates/home/event_page.html
@@ -6,7 +6,7 @@
 
 {% block extra_css %}
 {% compress css %}
-    <link rel="stylesheet" type="text/x-scss" href="{% static 'sass/event_info.scss' %}"/>
+    <link rel="stylesheet" type="text/x-scss" href="{% static 'css/event_info.scss' %}"/>
 {% endcompress %}
 {% endblock extra_css %}
 
