--- a/beobgrp_site/templates/base.html
+++ b/beobgrp_site/templates/base.html
@@ -19,11 +19,11 @@
         {# Global stylesheets #}
         {% compress css %}
         <link rel="stylesheet" type="text/x-scss" href="{% static 'css/beobgrp_site.scss' %}"/>
-        {% endcompress %}
-
         {% block extra_css %}
         {# Override this in templates to add extra stylesheets #}
         {% endblock %}
+        {% endcompress %}
+
 
     </head>
 
@@ -32,30 +32,55 @@
 
         <header>
             {% get_site_root as site_root %}
-            {%  include "includes/site_menu.html" with menu_id="desktop-nav" %} <!-- Desktop Menu -->
-
-            <!-- Mobile Menu Button -->
-            <input type="checkbox" id="menu-toggle" class="menu-toggle">
-            <label for="menu-toggle" class="menu-icon">&#9776;</label>
-
-            <!-- Mobile Navigation -->
-            {% include "includes/site_menu.html" with menu_id="mobile-nav" %}
-        </header>
-
-        <div class="container">
-            <!-- Sidebar -->
-            <aside class="sidebar">
-                {% block sidebar %}{% endblock %}
-            </aside>
-
-            <!-- Main Content -->
-            <main id="main-content">
-                <div id="content">
-                    {% block content %}{% endblock %}
+        
+            <nav class="navbar is-dark" role="navigation" aria-label="main navigation">
+                <div class="container">
+                    <div class="navbar-brand">
+                        <a class="navbar-item" href="{% pageurl site_root %}">
+                            <strong>{{ site_root.title }}</strong>
+                        </a>
+        
+                        {# Hidden checkbox for menu toggle #}
+                        <input type="checkbox" id="menu-toggle" class="menu-toggle">
+                        <label for="menu-toggle" class="navbar-burger" aria-label="menu">
+                            <span aria-hidden="true"></span>
+                            <span aria-hidden="true"></span>
+                            <span aria-hidden="true"></span>
+                        </label>
+                    </div>
+        
+                    <div id="navMenu" class="navbar-menu">
+                        <div class="navbar-start">
+                            <a class="navbar-item {% add_active_class site_root.url %}" href="{% pageurl site_root %}">
+                                Home
+                            </a>
+                            {% for menuitem in site_root.get_children.live.in_menu %}
+                                <a class="navbar-item {% add_active_class menuitem.url %}" href="{% pageurl menuitem %}">
+                                    {{ menuitem.title }}
+                                </a>
+                            {% endfor %}
+                        </div>
+                    </div>
                 </div>
-            </main>
-        </div>
+            </nav>
+        </header>
+                
+        {# Main Layout #}
+        <div class="container mt-5">
+            <div class="columns">
+                <aside class="column is-one-quarter">
+                    {% block sidebar %}{% endblock %}
+                </aside>
 
+                <main id="main-content" class="column">
+                    <section class="section">
+                        <div id="content">
+                            {% block content %}{% endblock %}
+                        </div>
+                    </section>
+                </main>
+            </div>
+        </div>
 
 
         {# Global javascript #}
