--- a/beobgrp_site/templates/base.html
+++ b/beobgrp_site/templates/base.html
@@ -37,27 +37,23 @@
                 <div class="container">
                     <div class="navbar-brand">
                         <a class="navbar-item" href="{% pageurl site_root %}">
-                            <strong>{{ site_root.title }}</strong>
+                            <img src="{% static 'images/logo-beobachtergruppe.jpg' %}" alt="Logo" width="112" height="28">
                         </a>
-        
-                        {# Hidden checkbox for menu toggle #}
-                        <input type="checkbox" id="menu-toggle" class="menu-toggle">
-                        <label for="menu-toggle" class="navbar-burger" aria-label="menu">
+            
+                        <!-- Bulma's navbar-burger toggle -->
+                        <a role="button" class="navbar-burger" aria-label="menu" aria-expanded="false" data-target="navMenu">
                             <span aria-hidden="true"></span>
                             <span aria-hidden="true"></span>
                             <span aria-hidden="true"></span>
-                        </label>
+                        </a>
                     </div>
-        
+            
+                    <!-- Navbar menu (hidden on mobile by default) -->
                     <div id="navMenu" class="navbar-menu">
                         <div class="navbar-start">
-                            <a class="navbar-item {% add_active_class site_root.url %}" href="{% pageurl site_root %}">
-                                Home
-                            </a>
+                            <a class="navbar-item" href="{% pageurl site_root %}">Home</a>
                             {% for menuitem in site_root.get_children.live.in_menu %}
-                                <a class="navbar-item {% add_active_class menuitem.url %}" href="{% pageurl menuitem %}">
-                                    {{ menuitem.title }}
-                                </a>
+                                <a class="navbar-item" href="{% pageurl menuitem %}">{{ menuitem.title }}</a>
                             {% endfor %}
                         </div>
                     </div>
