--- a/beobgrp_site/static/css/beobgrp_site.scss
+++ b/beobgrp_site/static/css/beobgrp_site.scss
@@ -30,31 +30,31 @@ $background-opacity: 0.7;
 //   color: $text;
 // }
 
-.block-h1 {
+.block-h1, h1 {
   @extend .title;
   @extend .is-2;
   color: gold;
 }
 
-.block-h2 {
+.block-h2, h2 {
   @extend .title;
   @extend .is-3;
   color: gold;
 }
 
-.block-h3 {
+.block-h3, h3 {
   @extend .title;
   @extend .is-4;
   color: gold;
 }
 
-.block-h4 {
+.block-h4, h4 {
   @extend .title;
   @extend .is-5;
   color: gold;
 }
 
-.block-h5 {
+.block-h5, h5 {
   @extend .title;
   @extend .is-6;
   color: gold;
