--- a/home/templates/home/gallery_index_page.html
+++ b/home/templates/home/gallery_index_page.html
@@ -14,13 +14,11 @@
     <hr/>
     <div class="columns is-multiline">
         {% for gallery_page in galleries %}
-            <div class="column is-desktop-3 is-tablet-6 is-mobile-12">
+            <div class="column is-one-quarter-desktop is-half-tablet is-full-mobile">
                 <a href="{% pageurl gallery_page %}">
                     <div class="card">
                         <div class="card-image">
-                            <figure class="image">
-                                    {% image gallery_page.cover_image width-200 class="gallery-thumbnail" %}
-                            </figure>
+                            {% image gallery_page.cover_image original class="is-fullwidth" %}
                         </div>
                         <div class="card-content">
                             <p>{{ gallery_page.title }}</p>
